--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "cd server && npm start",
-    "start": "concurrently - kill-others \"npm run server\" \"npm run client\"",
+    "start": "npm-run-all --parallel server client",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
@@ -14,12 +14,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "5.3.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0"
-  }
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {}
 }
