--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "server": "cd server && npm start",
     "start": "npm-run-all --parallel server client",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "install:client": "cd client && npm install",
+    "install:server": "cd server && npm install",
+    "postinstall": "run-p install:*"
   },
   "keywords": [],
   "author": "",
@@ -22,10 +25,5 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "npm-run-all": "^4.1.5"
   },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0"
-  }
+  "dependencies": {}
 }
